@@ -33,9 +33,10 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Fix regression in automatically expanding deeply nested mailboxes in the dynamic folder list.
 * [mms] Fix regression where containers could not be moved via drag/drop in dynamic view.
-* [mms] Don't perform purge sentmail login task unless at least one sentmail mailbox exists.
-* [mms] Don't perform purge Spam login task unless Spam mailbox exists.
+* [mms] Don&apos;t perform purge sentmail login task unless at least one sentmail mailbox exists.
+* [mms] Don&apos;t perform purge Spam login task unless Spam mailbox exists.
 * [mms] Fix dragging a mailbox to the base level in dynamic view.
 * [mms] Add ability to drag/drop text to dynamic HTML compose window on Chrome and IE.
 * [mms] Re-enable drag/drop of text to dynamic plaintext compose window (Bug #13281).
@@ -3704,9 +3705,10 @@
    <date>2014-07-08</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Fix regression in automatically expanding deeply nested mailboxes in the dynamic folder list.
 * [mms] Fix regression where containers could not be moved via drag/drop in dynamic view.
-* [mms] Don't perform purge sentmail login task unless at least one sentmail mailbox exists.
-* [mms] Don't perform purge Spam login task unless Spam mailbox exists.
+* [mms] Don&apos;t perform purge sentmail login task unless at least one sentmail mailbox exists.
+* [mms] Don&apos;t perform purge Spam login task unless Spam mailbox exists.
 * [mms] Fix dragging a mailbox to the base level in dynamic view.
 * [mms] Add ability to drag/drop text to dynamic HTML compose window on Chrome and IE.
 * [mms] Re-enable drag/drop of text to dynamic plaintext compose window (Bug #13281).
