@@ -2,6 +2,8 @@
 v6.2.1-git
 ----------
 
+[mms] Fix regression in automatically expanding deeply nested mailboxes in the
+      dynamic folder list.
 [mms] Fix regression where containers could not be moved via drag/drop in
       dynamic view.
 [mms] Don't perform purge sentmail login task unless at least one sentmail
